<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="jokeViewModel"
            type="com.ml.chucknorrisapp.viewmodel.JokeViewModel" />

        <variable
            name="homeFragment"
            type="com.ml.chucknorrisapp.view.fragment.HomeFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/find_jokes_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/find_jokes_text"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/joke_id_search_edittext"
            android:layout_margin="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_number_1_to_520_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/find_jokes_textview">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/search_input_field"
                android:singleLine="true"
                android:imeOptions="actionDone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/random_button"
            style="@style/SearchActionButton"
            android:onClick="@{() -> jokeViewModel.refreshJokes()}"
            android:layout_marginEnd="30dp"
            android:text="@string/random_text"
            app:layout_constraintEnd_toStartOf="@+id/search_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/joke_id_search_edittext"
            app:layout_constraintTop_toBottomOf="@id/joke_id_search_edittext" />

        <Button
            android:id="@+id/search_button"
            style="@style/SearchActionButton"
            android:onClick="@{() -> homeFragment.handleSearchInput()}"
            android:text="@string/search_text"
            app:layout_constraintEnd_toEndOf="@id/joke_id_search_edittext"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/random_button"
            app:layout_constraintTop_toBottomOf="@id/joke_id_search_edittext" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/joke_display_recyclerview"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/row_joke_item"
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/random_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>